Modify project structure and files to work with new setup
Add new project structure:
 - src: Folder containing Blog source code
 - out: Generated by making project (contains generated blog)

Update Makefile and other files to work with this structure
 - Makefile
 - make_index.py

Delete files that are generated by Makefile from repo

--- a/styles/common.css
+++ b/styles/common.css
@@ -1,7 +1,10 @@
 body {
-  width: 650px;
   max-width: 90%;
-  margin: 3em auto;
+  max-width: 44em; 
+  padding-right: 2em;
+  padding-left: 2em;
+  margin: 1em auto;
+  font-family: Verdana, sans-serif;
 }
 
 .title {
