feat: pdf-download, pretty-date, refactor, post.css
Added features
 - pdf-download: Download blog post to PDF (via pandoc & latex)
 - pretty-date: Added filter for making date pretty
 - post.css: Custom css only for posts
 - templates/latex: latex template for generating PDF

refacor: Project refactored, some files renamed
 - renamed src to blog-src
 - renamed out to blog-out

make_index.pt script improvements

--- a/styles/common.css
+++ b/styles/common.css
@@ -27,8 +27,9 @@ hr {
 }
 
 blockquote, div.sourceCode {
-  background: #f9f9f9;
+  background: #f8f8f8;
   padding: 0.5em 10px;
+  border: 1px solid gray;
 }
 
 p > code, li > code {
