--- a/templates/index.html
+++ b/templates/index.html
@@ -47,13 +47,8 @@ $include-before$
 $endfor$
 
 <header id="title-block-header">
-  <h1 class="title">blog</h1>
+  <h1 class="title">Blog</h1>
 </header>
-
-<p>
-  This is my blog. There are many like it, but this is the one that embarrasses me. <a href="./feed.json">JSON Feed</a>
-</p>
-<hr>
 
 $if(toc)$
 <nav id="$idprefix$TOC" role="doc-toc">
