--- a/templates/post.html
+++ b/templates/post.html
@@ -45,7 +45,11 @@ $endfor$
 $for(include-before)$
 $include-before$
 $endfor$
-<a href="../index.html">&laquo; blog</a>
+<div class="navigation">
+    <a class="alignleft" href="../index.html">&#8617; blog</a>
+    <a class="alignright" href="../pdf/$filename$.pdf" download>&#8659; Download as PDF</a>
+    <div style="clear: both;"></div>
+</div>
 $if(title)$
 <header id="title-block-header">
 <h1 class="title">$title$</h1>
