feat: fonts added to web(css) + main font changed

--- a/templates/post.html
+++ b/templates/post.html
@@ -46,7 +46,7 @@ $for(include-before)$
 $include-before$
 $endfor$
 <div class="navigation">
-    <a class="alignleft" href="../index.html">&#8617; blog</a>
+    <a class="alignleft" href="../index.html">&laquo; Blog</a>
     <a class="alignright" href="../pdf/$filename$.pdf" download>&#8659; Download as PDF</a>
     <div style="clear: both;"></div>
 </div>
