--- a/styles/common.css
+++ b/styles/common.css
@@ -1,10 +1,65 @@
+@font-face {
+    font-family: 'Open Sans';
+    src: url('../font/opensans/OpenSans-Regular.eot');
+    src: url('../font/opensans/OpenSans-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../font/opensans/OpenSans-Regular.woff2') format('woff2'),
+        url('../font/opensans/OpenSans-Regular.woff') format('woff'),
+        url('../font/opensans/OpenSans-Regular.ttf') format('truetype'),
+        url('../font/opensans/OpenSans-Regular.svg#OpenSans-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    src: url('../font/opensans/OpenSans-Bold.eot');
+    src: url('../font/opensans/OpenSans-Bold.eot?#iefix') format('embedded-opentype'),
+        url('../font/opensans/OpenSans-Bold.woff2') format('woff2'),
+        url('../font/opensans/OpenSans-Bold.woff') format('woff'),
+        url('../font/opensans/OpenSans-Bold.ttf') format('truetype'),
+        url('../font/opensans/OpenSans-Bold.svg#OpenSans-Bold') format('svg');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+
+/* inconsolata-regular - latin */
+@font-face {
+  font-family: 'Inconsolata';
+  font-style: normal;
+  font-weight: normal;
+  src: url('../font/inconsolata/inconsolata-v21-latin-500.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('../font/inconsolata/inconsolata-v21-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../font/inconsolata/inconsolata-v21-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../font/inconsolata/inconsolata-v21-latin-500.woff') format('woff'), /* Modern Browsers */
+       url('../font/inconsolata/inconsolata-v21-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../font/inconsolata/inconsolata-v21-latin-500.svg#Inconsolata') format('svg'); /* Legacy iOS */
+}
+
+/* inconsolata-bold - latin */
+@font-face {
+  font-family: 'Inconsolata';
+  font-weight: bold;
+  font-style: normal;
+  src: url('../font/inconsolata/inconsolata-v21-latin-700.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('../font/inconsolata/inconsolata-v21-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../font/inconsolata/inconsolata-v21-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../font/inconsolata/inconsolata-v21-latin-700.woff') format('woff'), /* Modern Browsers */
+       url('../font/inconsolata/inconsolata-v21-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../font/inconsolata/inconsolata-v21-latin-700.svg#Inconsolata') format('svg'); /* Legacy iOS */
+}
+
 body {
   max-width: 90%;
   max-width: 44em; 
   padding-right: 2em;
   padding-left: 2em;
   margin: 1em auto;
-  font-family: Verdana, sans-serif;
+  font-family: Open Sans, Verdana, sans-serif;
 }
 
 .title {
