feat: Improved style of html & latex, updated post example

--- a/templates/post.html
+++ b/templates/post.html
@@ -42,6 +42,7 @@ $for(header-includes)$
 $endfor$
 </head>
 <body>
+<div class="content">
 $for(include-before)$
 $include-before$
 $endfor$
@@ -73,5 +74,6 @@ $body$
 $for(include-after)$
 $include-after$
 $endfor$
+</div>
 </body>
 </html>
