--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,7 @@ $for(header-includes)$
 $endfor$
 </head>
 <body>
+<div class="content">
 $for(include-before)$
 $include-before$
 $endfor$
@@ -60,5 +61,6 @@ $body$
 $for(include-after)$
 $include-after$
 $endfor$
+</div>
 </body>
 </html>
