--- a/styles/common.css
+++ b/styles/common.css
@@ -1,174 +1,1 @@
-@font-face {
-    font-family: 'Open Sans';
-    src: url('../font/opensans/OpenSans-Regular.eot');
-    src: url('../font/opensans/OpenSans-Regular.eot?#iefix') format('embedded-opentype'),
-        url('../font/opensans/OpenSans-Regular.woff2') format('woff2'),
-        url('../font/opensans/OpenSans-Regular.woff') format('woff'),
-        url('../font/opensans/OpenSans-Regular.ttf') format('truetype'),
-        url('../font/opensans/OpenSans-Regular.svg#OpenSans-Regular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Open Sans';
-    src: url('../font/opensans/OpenSans-Bold.eot');
-    src: url('../font/opensans/OpenSans-Bold.eot?#iefix') format('embedded-opentype'),
-        url('../font/opensans/OpenSans-Bold.woff2') format('woff2'),
-        url('../font/opensans/OpenSans-Bold.woff') format('woff'),
-        url('../font/opensans/OpenSans-Bold.ttf') format('truetype'),
-        url('../font/opensans/OpenSans-Bold.svg#OpenSans-Bold') format('svg');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
-}
-
-
-/* inconsolata-regular - latin */
-@font-face {
-  font-family: 'Inconsolata';
-  font-style: normal;
-  font-weight: normal;
-  src: url('../font/inconsolata/inconsolata-v21-latin-500.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../font/inconsolata/inconsolata-v21-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../font/inconsolata/inconsolata-v21-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../font/inconsolata/inconsolata-v21-latin-500.woff') format('woff'), /* Modern Browsers */
-       url('../font/inconsolata/inconsolata-v21-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../font/inconsolata/inconsolata-v21-latin-500.svg#Inconsolata') format('svg'); /* Legacy iOS */
-}
-
-/* inconsolata-bold - latin */
-@font-face {
-  font-family: 'Inconsolata';
-  font-weight: bold;
-  font-style: normal;
-  src: url('../font/inconsolata/inconsolata-v21-latin-700.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../font/inconsolata/inconsolata-v21-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../font/inconsolata/inconsolata-v21-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../font/inconsolata/inconsolata-v21-latin-700.woff') format('woff'), /* Modern Browsers */
-       url('../font/inconsolata/inconsolata-v21-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../font/inconsolata/inconsolata-v21-latin-700.svg#Inconsolata') format('svg'); /* Legacy iOS */
-}
-
-@media screen and (max-width: 600px) {
-  figure img {
-      max-width: 100%;
-  }
-  figure figcaption {
-      max-width: 100%;
-  }
-}
-
-@media screen and (min-width: 600px) and (max-width: 720px) {
-  figure img {
-      max-width: 94%;
-  }
-  figure figcaption {
-      max-width: 94%;
-  }
-}
-
-@media screen and (min-width: 720px) {
-  figure img {
-      max-width: 84%;
-  }
-  figure figcaption {
-      max-width: 84%;
-  }
-}
-
-@media print {
-      /* .logo-container, */
-      /* .img-wrapper, */
-      img {
-        max-with: none !important;
-        width: 88% !important;
-     }
-     .navigation {
-         display: none
-     }
-}
-
-body {
-  font-size: 15px;
-  max-width: 90%;
-  max-width: 51em; 
-  /* padding-right: 0.5em; */
-  /* padding-left: 0.5em; */
-  margin: 0.1em auto;
-  font-family: Open Sans, Verdana, sans-serif;
-  background-color: gray;
-}
-
-.content {
-  background-color: #fefefe;
-  padding: 2% 4.5% 2% 4.5%;
-  min-height: 100vh;
-}
-
-.title {
-  font-size: 2.4em
-}
-
-body li {
-  text-align: left;
-  line-height: 1.6;
-}
-
-p {
-  text-align: justify;
-  line-height: 1.6;
-}
-
-hr {
-  max-width: 33%;
-  margin: 2em auto;
-}
-
-blockquote, div.sourceCode {
-  max-width: 41em; 
-  background: #f8f8f8;
-  padding: 0.5em;
-  margin-left: 2%;
-  margin-right: 2%;
-  border: 1px solid gray;
-  margin-left: auto;
-  margin-right: auto;
-  font-size: 0.8em;
-}
-
-p > code, li > code {
-  padding: 1px 3px;
-  border-radius: 3px;
-  background-color: #f0f0f0;
-}
-
-.math.inline {
-  white-space: nowrap;
-}
-
-figure img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-figure figcaption {
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-}
-
-/* Prevent subscripts, superscripts from changing line height. */
-sup, sub {
-  vertical-align: baseline;
-  position: relative;
-  top: -0.4em;
-}
-
-sub {
-  top: 0.4em;
-}
+common-light.css
