--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,7 @@ $highlighting-css$
 $endif$
 $for(css)$
   <link rel="stylesheet" href="$css$" />
+  <link rel="stylesheet" href="styles/nav.css" />
 $endfor$
 $if(math)$
   $math$
@@ -42,15 +43,26 @@ $for(header-includes)$
 $endfor$
 </head>
 <body>
+<header class="header">
+  <a href="index.html" class="logo">Blog</a>
+  <input class="menu-btn" type="checkbox" id="menu-btn" />
+  <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+  <ul class="menu">
+    <!-- <li><a href="#work">Home</a></li> -->
+    <li><a href="index.html">Blog</a></li>
+    <li><a href="#careers">About</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</header>
+<div class="main">
 <div class="content">
 $for(include-before)$
 $include-before$
 $endfor$
-
-<header id="title-block-header">
-  <h1 class="title">Blog</h1>
-</header>
-
+<!-- <header id="title-block-header"> -->
+<!--   <h1 class="title">Blog</h1> -->
+<!-- </header> -->
+<!--  -->
 $if(toc)$
 <nav id="$idprefix$TOC" role="doc-toc">
 $table-of-contents$
@@ -61,6 +73,7 @@ $body$
 $for(include-after)$
 $include-after$
 $endfor$
+</div>
 </div>
 </body>
 </html>
