--- a/templates/post.html
+++ b/templates/post.html
@@ -30,6 +30,7 @@ $highlighting-css$
 $endif$
 $for(css)$
   <link rel="stylesheet" href="$css$" />
+  <link rel="stylesheet" href="../styles/nav.css" />
 $endfor$
 $if(math)$
   $math$
@@ -42,15 +43,28 @@ $for(header-includes)$
 $endfor$
 </head>
 <body>
+<header class="header">
+  <a href="../index.html" class="logo">Blog</a>
+  <input class="menu-btn" type="checkbox" id="menu-btn" />
+  <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+  <ul class="menu">
+    <!-- <li><a href="#work">Home</a></li> -->
+    <li><a href="../pdf/$filename$.pdf" download>Download as PDF</a></li>
+    <li><a href="../index.html">Blog</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</header>
+<div class="main">
 <div class="content">
 $for(include-before)$
 $include-before$
 $endfor$
-<div class="navigation">
-    <a class="alignleft" href="../index.html">&laquo; Blog</a>
-    <a class="alignright" href="../pdf/$filename$.pdf" download>&#8659; Download as PDF</a>
-    <div style="clear: both;"></div>
-</div>
+<!-- <div class="navigation"> -->
+<!--     <a class="alignleft" href="../index.html">&laquo; Blog</a> -->
+<!--     <a class="alignright" href="../pdf/$filename$.pdf" download>&#8659; Download as PDF</a> -->
+<!--     <div style="clear: both;"></div> -->
+<!-- </div> -->
 $if(title)$
 <header id="title-block-header">
 <h1 class="title">$title$</h1>
@@ -74,6 +88,7 @@ $body$
 $for(include-after)$
 $include-after$
 $endfor$
+</div>
 </div>
 </body>
 </html>
