--- a/styles/common.css
+++ b/styles/common.css
@@ -114,11 +114,11 @@ a[href]:hover {
 
 blockquote, div.sourceCode {
   /* max-width: 41em; */
-  background: #222222;
+  background: #222;
   padding: 0.5em;
   margin-left: 2%;
   margin-right: 2%;
-  border: 1px solid gray;
+  border: 1px solid #555;
   margin-left: auto;
   margin-right: auto;
   font-size: 0.9em;
