--- a/templates/index.html
+++ b/templates/index.html
@@ -1,79 +1,28 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="$lang$" xml:lang="$lang$"$if(dir)$ dir="$dir$"$endif$>
-<head>
-  <meta charset="utf-8" />
-  <meta name="generator" content="pandoc" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-$for(author-meta)$
-  <meta name="author" content="$author-meta$" />
-$endfor$
-$if(date-meta)$
-  <meta name="dcterms.date" content="$date-meta$" />
-$endif$
-$if(keywords)$
-  <meta name="keywords" content="$for(keywords)$$keywords$$sep$, $endfor$" />
-$endif$
-  <title>$if(title-prefix)$$title-prefix$ – $endif$$pagetitle$</title>
-  <style>
-      code{white-space: pre-wrap;}
-      span.smallcaps{font-variant: small-caps;}
-      span.underline{text-decoration: underline;}
-      div.column{display: inline-block; vertical-align: top; width: 50%;}
-$if(quotes)$
-      q { quotes: "“" "”" "‘" "’"; }
-$endif$
-  </style>
-$if(highlighting-css)$
-  <style>
-$highlighting-css$
-  </style>
-$endif$
-$for(css)$
-  <link rel="stylesheet" href="$css$" />
-  <link rel="stylesheet" href="styles/nav.css" />
-$endfor$
-$if(math)$
-  $math$
-$endif$
-  <!--[if lt IE 9]>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
-  <![endif]-->
-$for(header-includes)$
-  $header-includes$
-$endfor$
-</head>
+ <!DOCTYPE html>
+<html lang="en">
+<meta charset="UTF-8">
+<title>Nebojša Koturović - Home</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="stylesheet" href="styles/common.css">
+<link rel="stylesheet" href="styles/index.css">
+<link rel="stylesheet" href="styles/nav.css">
 <body>
 <header class="header">
-  <a href="index.html" class="logo">Blog</a>
+  <a href="index.html" class="logo">Nebojša Koturović</a>
   <input class="menu-btn" type="checkbox" id="menu-btn" />
   <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
   <ul class="menu">
-    <!-- <li><a href="#work">Home</a></li> -->
-    <li><a href="index.html">Blog</a></li>
-    <li><a href="#careers">About</a></li>
-    <li><a href="#contact">Contact</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="blog.html">Blog</a></li>
   </ul>
 </header>
 <div class="main">
-<div class="content">
-$for(include-before)$
-$include-before$
-$endfor$
-<!-- <header id="title-block-header"> -->
-<!--   <h1 class="title">Blog</h1> -->
-<!-- </header> -->
-<!--  -->
-$if(toc)$
-<nav id="$idprefix$TOC" role="doc-toc">
-$table-of-contents$
-</nav>
-$endif$
-$body$
-
-$for(include-after)$
-$include-after$
-$endfor$
+<div class="content center-text">
+ <h1>Hi, my name is Nebojša</h1>
+ <img class="avatar center" src="img/avatar.jpg"/>
+ <h2>I'm a software developer</h2>
+<h2><a href="files/Nebojsa-Koturovic-Software-Developer-Resume.pdf" download>⇩ Resumé</a></h2>
 </div>
 </div>
 </body>
-</html>
+</html> 
