fix: Remove force download from resume and post

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
  <h1>Hi, my name is Nebojša</h1>
  <img class="avatar center" src="img/avatar.jpg"/>
  <h2>I'm a software developer</h2>
-<h2><a href="files/Nebojsa-Koturovic-Software-Developer-Resume.pdf" download>⇩ Resume</a></h2>
+<h2><a href="files/Nebojsa-Koturovic-Software-Developer-Resume.pdf">⇩ Resume</a></h2>
 </div>
 </div>
 </body>
