--- a/templates/post.html
+++ b/templates/post.html
@@ -48,7 +48,7 @@ $endfor$
   <input class="menu-btn" type="checkbox" id="menu-btn" />
   <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
   <ul class="menu">
-    <li><a href="../pdf/$filename$.pdf" download>Download as PDF</a></li>
+    <li><a href="../pdf/$filename$.pdf">Download as PDF</a></li>
     <li><a href="../index.html">Home</a></li>
     <li><a href="blog.html">Blog</a></li>
   </ul>
