--- a/templates/post.html
+++ b/templates/post.html
@@ -44,13 +44,13 @@ $endfor$
 </head>
 <body>
 <header class="header">
-  <a href="../index.html" class="logo">Blog</a>
+  <a href="../index.html" class="logo">kotur<span class="logo-blue-part">.me</span></a>
   <input class="menu-btn" type="checkbox" id="menu-btn" />
   <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
   <ul class="menu">
     <li><a href="../pdf/$filename$.pdf">Download as PDF</a></li>
     <li><a href="../index.html">Home</a></li>
-    <li><a href="blog.html">Blog</a></li>
+    <li><a href="../blog.html">Blog</a></li>
   </ul>
 </header>
 <div class="main">
