--- a/templates/blog.html
+++ b/templates/blog.html
@@ -44,7 +44,7 @@ $endfor$
 </head>
 <body>
 <header class="header">
-  <a href="index.html" class="logo">Nebojša Koturović</a>
+  <a href="index.html" class="logo">kotur<span class="logo-blue-part">.me</span></a>
   <input class="menu-btn" type="checkbox" id="menu-btn" />
   <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
   <ul class="menu">
