feat: Implemented current path for blog
Blog show path where are we located on website

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -54,6 +54,7 @@ $endfor$
 </header>
 <div class="main">
 <div class="content">
+<span class="path"><a href="index.html">kotur.me</a>/<a class="current-path" href="../blog.html">blog</a></span>
 $for(include-before)$
 $include-before$
 $endfor$
