--- a/templates/post.html
+++ b/templates/post.html
@@ -55,6 +55,7 @@ $endfor$
 </header>
 <div class="main">
 <div class="content">
+<span class="path"><a href="../index.html">kotur.me</a>/<a href="../blog.html">blog</a>/<a class="current-path" href="./$filename$.html">$filename$</a></span>
 $for(include-before)$
 $include-before$
 $endfor$
