--- a/templates/index.html
+++ b/templates/index.html
@@ -17,11 +17,13 @@
   </ul>
 </header>
 <div class="main">
-<div class="content center-text">
+<div class="content">
+<div class="center-text">
  <h1>Hi, my name is Nebojša</h1>
  <img class="avatar center" src="img/avatar.jpg"/>
  <h2>I'm a software developer</h2>
 <h2><a href="files/Nebojsa-Koturovic-Software-Developer-Resume.pdf">⇩ Resume</a></h2>
+</div>
 </div>
 </div>
 </body>
