style: Fixes in style, cpp-blog-post updated

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -58,10 +58,9 @@ $endfor$
 $for(include-before)$
 $include-before$
 $endfor$
-<!-- <header id="title-block-header"> -->
-<!--   <h1 class="title">Blog</h1> -->
-<!-- </header> -->
-<!--  -->
+<header id="title-block-header">
+  <h1 class="title">Blog posts</h1>
+</header>
 $if(toc)$
 <nav id="$idprefix$TOC" role="doc-toc">
 $table-of-contents$
