--- a/styles/common.css
+++ b/styles/common.css
@@ -84,7 +84,7 @@ a, a:visited {
 .title {
   font-size: 2.3em;
   margin: 0;
-  padding: 0;
+  padding: 0.2em 0;
  }
 
 body li {
@@ -209,6 +209,21 @@ sub {
   figure figcaption {
       max-width: 82%;
   }
+}
+
+.path {
+    display: inline-block;
+    padding: 0.5em 0;
+    width: 100%;
+    color: #888; 
+}
+
+.path a.current-path {
+    font-weight: 600;
+    color: #3A97C8;
+}
+.path a.visited-path {
+    color: #888; 
 }
 
 @media print {
