--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,8 @@
  <h1>Hi, my name is Nebojša</h1>
  <img class="avatar center" src="img/avatar.jpg"/>
  <h2>I'm a software developer</h2>
-<h2><a href="files/Nebojsa-Koturovic-Software-Developer-Resume.pdf">⇩ Resume</a></h2>
+ Sometimes I write some <a href="blog.html">blog</a> posts
+ <h2><a href="files/Nebojsa-Koturovic-Software-Developer-Resume.pdf">⇩ Resume</a></h2>
 </div>
 </div>
 </div>
