feat: Add e-mail to Home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,8 @@
  <img class="avatar center" src="img/avatar.jpg"/>
  <h2>I'm a software developer</h2>
  Sometimes I write some <a href="blog.html">blog</a> posts
- <h2><a href="files/Nebojsa-Koturovic-Software-Developer-Resume.pdf">⇩ Resume</a></h2>
+ <h2 style="margin-bottom: 0;"><a href="files/Nebojsa-Koturovic-Software-Developer-Resume.pdf">⇩ Resume</a></h2>
+ <a href="mailto:contact@kotur.me?subject=Hi, I saw your web presentation">contact@kotur.me</a>
 </div>
 </div>
 </div>
