--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,25 @@
  <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<title>Nebojša Koturović - Home</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
+<head>
 <link rel="stylesheet" href="styles/common.css">
 <link rel="stylesheet" href="styles/index.css">
 <link rel="stylesheet" href="styles/nav.css">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+</head>
+<title>Nebojša Koturović - Home</title>
 <body>
 <header class="header">
   <a href="index.html" class="logo">kotur<span class="logo-blue-part">.me</span></a>
   <input class="menu-btn" type="checkbox" id="menu-btn" />
   <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
   <ul class="menu">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="blog.html">Blog</a></li>
+    <li><a href="index.html"><img class="nav-svg" src="./img/icon/fi-xnsuxl-home-solid.svg"/>Home</a></li>
+    <li><a href="blog.html"><img class="nav-svg" src="./img/icon/fi-xnsuxl-code-solid.svg"/>Blog</a></li>
   </ul>
 </header>
 <div class="main">
