--- a/templates/post.html
+++ b/templates/post.html
@@ -59,7 +59,8 @@ $endfor$
 <div class="main">
 <div class="content">
 <span class="path"><a href="../index.html">kotur.me</a>/<a href="../blog.html">blog</a>/<a class="current-path" href="./$filename$.html">$filename$</a></span>
-<div class="download-as-pdf"><p><a href="../pdf/$filename$.pdf"><img class="post-svg-icon" src="../img/icon/fi-xnsuxl-file-pdf-solid.svg"/>Download as PDF</a></div>
+<a href="../blog.html"><div id="btn-div-back" class="btn-div"><p><img class="btn-svg-icon" src="../img/icon/fi-cwllxl-arrow-wide.svg"/></div></a>
+<a href="../pdf/$filename$.pdf"><div class="btn-div"><p><img class="btn-svg-icon" src="../img/icon/fi-xnsuxl-file-pdf-solid.svg"/>Download as PDF</div></a>
 $for(include-before)$
 $include-before$
 $endfor$
