--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 </header>
 <div class="main">
 <div class="content">
-<div class="center-text">
+<div class="center-text" id="index-content">
  <h2>Hi, my name is Nebojša</h2>
  <img class="avatar center" src="img/avatar.jpg"/>
  <h3>I'm a software developer</h3>
