feat: Add giscus comments

--- a/styles/common.css
+++ b/styles/common.css
@@ -81,6 +81,10 @@ a, a:visited {
   padding: 2% 2% 2% 2%;
 }
 
+.comments {
+  padding: 2% 2% 2% 2%;
+}
+
 .title {
   font-size: 2.3em;
   margin: 0;
