--- a/styles/common.css
+++ b/styles/common.css
@@ -78,11 +78,13 @@ a, a:visited {
 
 .content {
   /* background-color: #121212; */
-  padding: 2% 2% 2% 2%;
+  /* padding: 0.6em; */
+  padding: 1em 2% 1em 2%;
 }
 
 .comments {
-  padding: 2% 2% 2% 2%;
+  /* padding: 0.6em; */
+  padding: 1em 2% 1em 2%;
 }
 
 .title {
