--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 </head>
-<title>Nebojša Koturović - Home</title>
+<title>Nebojsa Koturovic - Home</title>
 <body>
 <header class="header">
   <a href="index.html" class="logo">kotur<span class="logo-blue-part">.me</span></a>
