--- a/styles/common.css
+++ b/styles/common.css
@@ -54,9 +54,9 @@
 }
 
 body {
-  background-color: #212121;
-  color: #ccc;
-  font-size: 13px;
+  background-color: #202020;
+  color: #cecece;
+  font-size: 15px;
   font-family: Open Sans, Verdana, sans-serif;
   min-height: 95vh;
   /* background-color: gray; */
@@ -85,10 +85,16 @@ a, a:visited {
 .comments {
   /* padding: 0.6em; */
   padding: 0.6em 2% 0.6em 2%;
+  border-top: 1px solid #777;
+  margin-top: 0.5em;
+}
+
+.giscus {
+  margin-top: 1em;
 }
 
 .title {
-  font-size: 2.3em;
+  font-size: 1.9em;
   margin: 0;
   padding: 0.2em 0;
  }
@@ -98,9 +104,14 @@ body li {
   line-height: 1.6;
 }
 
+h1 {
+  font-size: 1.7em
+}
+
 p {
   text-align: justify;
   line-height: 1.6;
+  color: #ddd;
 }
 
 hr {
@@ -122,6 +133,7 @@ blockquote, div.sourceCode {
   background: #222;
   padding: 0.5em;
   border: 1px solid #777;
+  font-size: 0.97em;
 }
 
 p > code, li > code {
@@ -173,7 +185,7 @@ sub {
     display: inline-block;
     padding: 0.5em 0;
     width: 100%;
-    color: #888; 
+    color: #8c8c8c; 
 }
 
 .path a.current-path {
@@ -181,7 +193,7 @@ sub {
     color: #3A97C8;
 }
 .path a.visited-path {
-    color: #888; 
+    color: #8c8c8c; 
 }
 
 .btn-svg-icon {
@@ -210,12 +222,12 @@ sub {
 }
 
 .btn-div p {
-    font-size: 0.95em;
+    font-size: 0.9em;
     font-weight: 800;
 }
 
 a > .btn-div {
-    color: #ccc;
+    color: #cecece;
 }
 
 a > .btn-div:hover {
@@ -231,6 +243,16 @@ a > .btn-div:hover {
     transform: translate(0em, 0.17em);
 }
 
+#title-block-header h1 {
+    padding-top: 0.75em;
+}
+
+#TOC {
+    border-bottom: 1px solid #777;
+    padding-bottom: 0.5em;
+    margin-bottom: 1.5em;
+}
+
 @media screen and (max-width: 600px) {
   figure img {
       max-width: 98%;
@@ -240,7 +262,7 @@ a > .btn-div:hover {
   }
 
   blockquote, div.sourceCode {
-      font-size: 1em;
+      font-size: 0.97em;
   }
 }
 
@@ -252,14 +274,14 @@ a > .btn-div:hover {
       max-width: 88%;
   }
   blockquote, div.sourceCode {
-      font-size: 1em;
+      font-size: 0.97em;
   }
 }
 
 @media screen and (min-width: 720px) and (max-width: 1920px) {
-  body {
-      font-size: 14px;
-  }
+  /* body { */
+  /*     font-size: 15px; */
+  /* } */
   figure img {
       max-width: 80%;
   }
@@ -269,9 +291,9 @@ a > .btn-div:hover {
 }
 
 @media screen and (min-width: 1920px) {
-  body {
-      font-size: 15px;
-  }
+  /* body { */
+  /*     font-size: 16px; */
+  /* } */
   figure img {
       max-width: 82%;
   }
