--- a/templates/post.html
+++ b/templates/post.html
@@ -58,6 +58,7 @@ $endif$
 $for(header-includes)$
   $header-includes$
 $endfor$
+<script src="colorscheme.js"></script> 
 </head>
 <body>
 <header class="header">
@@ -67,6 +68,12 @@ $endfor$
   <ul class="menu">
     <li><a href="../index.html"><img class="nav-svg" src="../img/icon/fi-xnsuxl-home-solid.svg"/>Home</a></li>
     <li><a href="../blog.html"><img class="nav-svg" src="../img/icon/fi-xnsuxl-code-solid.svg"/>Blog</a></li>
+    <li><a id="cycle-colorscheme" onclick="cycleOptions('#color-scheme')"></a></li>
+   <select id="color-scheme" class="nav-option">
+     <option value="system">System</option>
+     <option value="dark">Dark</option>
+     <option value="light">Light</option>
+   </select>
   </ul>
 </header>
 <div class="main">
