--- a/styles/common.css
+++ b/styles/common.css
@@ -54,7 +54,8 @@
 }
 
 body {
-  background-color: #202020;
+  background-color: #1a1b23;
+  margin: 0;
   color: #cecece;
   font-size: 14px;
   font-family: Open Sans, Verdana, sans-serif;
@@ -68,6 +69,8 @@ body {
   /* padding-right: 0.5em; */
   /* padding-left: 0.5em; */
   margin: 0 auto;
+  margin-top: 70px; /* Add a top margin to avoid content overlay */
+  padding: 5px;
 }
 
 a, a:visited {
@@ -130,7 +133,7 @@ a[href]:hover {
 }
 
 blockquote, div.sourceCode {
-  background: #222;
+  background-color: #202028;
   padding: 0.5em;
   border: 1px solid #777;
   font-size: 0.97em;
@@ -140,7 +143,7 @@ p > code, li > code {
   /* border: 1px solid #777; */
   padding: 1px 3px;
   border-radius: 3px;
-  background-color: #282828;
+  background-color: #30303a;
 }
 
 .math.inline {
@@ -213,12 +216,12 @@ sub {
     padding: 0 2em;
     border: 1px solid #444;
     cursor: grab;
-    background-color: #282828;
+    background-color: #1a1b23;
     margin-right: 0.3em;
 }
 
 .btn-div:hover {
-    background-color: #333;
+    background-color: #2b2c34;
 }
 
 .btn-div p {
