Update border color

--- a/styles/common.css
+++ b/styles/common.css
@@ -144,7 +144,7 @@ p > code, li > code {
   border: 1px solid #444;
   padding: 1px 3px;
   border-radius: 3px;
-  background-color: #30303a;
+  background-color: #202028;
 }
 
 .math.inline {
