--- a/styles/index.css
+++ b/styles/index.css
@@ -7,8 +7,29 @@
 
 
 #index-content {
-    margin-top: 7vh;
+    margin-top: 6vh;
 }
+
+#index-svg-div {
+  margin-bottom: 1em; 
+  margin-top: 1.2em;
+}
+
+.index-svg {
+  width: 2em;
+  height: 2em;
+  margin: 0.2em 0.3em 0.2em 0.3em;
+  padding: 0.4em 0.5em 0.4em 0.5em;
+  border-radius: 5px;
+  /* transform: translate(-0.6em, 0.15em); */
+  filter: invert(0.88);
+}
+
+a:hover .index-svg {
+    filter: invert(1);
+    background-color: #d4d3cb;
+}
+
 
 @media screen and (min-width: 1920px) {
     .avatar {
