--- a/templates/index.html
+++ b/templates/index.html
@@ -25,12 +25,16 @@
 <div class="main">
 <div class="content">
 <div class="center-text" id="index-content">
- <h2>Hi, my name is Nebojša</h2>
+ <h2>Hi, my name is Nebojsa</h2>
  <img class="avatar center" src="img/avatar.jpg"/>
- <h3>I'm a software developer</h3>
- Sometimes I write some <a href="blog.html">blog</a> posts
- <h3 style="margin-bottom: 0.3em;"><a href="files/Nebojsa-Koturovic-Software-Developer-Resume.pdf">⇩ Resume</a></h3>
- <a href="mailto:contact@kotur.me?subject=Hi, I saw your web presentation">contact@kotur.me</a>
+ <h3>I'm a software engineer</h3>
+ <div id="index-svg-div">
+  <a href="files/nebojsa-koturovic-software-developer-resume.pdf"><img class="index-svg" src="img/icon/file-text.svg"/></a>
+  <a href="mailto:contact@kotur.me?subject=Hi, I saw your web presentation"><img class="index-svg" src="img/icon/mail.svg"/></a>
+  <a href="https://linkedin.com/in/nebojsa-koturovic"><img class="index-svg" src="img/icon/linkedin.svg"/></a>
+  <a href="https://github.com/nkoturovic"><img class="index-svg" src="img/icon/github.svg"/></a>
+ </div>
+ Checkout my <a href="blog.html">blog</a> posts </br></br>
 </div>
 </div>
 </div>
