Add minor fixes to index.html links

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
   <a href="https://linkedin.com/in/nebojsa-koturovic"><img class="index-svg" src="img/icon/linkedin.svg"/></a>
   <a href="https://github.com/nkoturovic"><img class="index-svg" src="img/icon/github.svg"/></a>
  </div>
- Checkout my <a href="blog.html">blog</a> posts </br></br>
+ Checkout my <a href="blog.html">blog</a> posts
 </div>
 </div>
 </div>
