--- a/styles/common.css
+++ b/styles/common.css
@@ -88,7 +88,7 @@ a, a:visited {
 .comments {
   /* padding: 0.6em; */
   padding: 0.6em 2% 0.6em 2%;
-  border-top: 1px solid #444;
+  border-top: 1px solid #445;
   margin-top: 0.5em;
 }
 
@@ -133,18 +133,18 @@ a[href]:hover {
 }
 
 blockquote, div.sourceCode {
-  background-color: #141418;
+  background-color: #18181c;
   padding: 0.5em;
-  border: 1px solid #444;
+  border: 1px solid #445;
   border-radius: 3px;
-  font-size: 0.97em;
+  font-size: 0.96em;
 }
 
 p > code, li > code {
-  border: 1px solid #444;
+  border: 1px solid #445;
   padding: 1px 3px;
   border-radius: 3px;
-  background-color: #202028;
+  background-color: #18181c;
 }
 
 .math.inline {
@@ -215,7 +215,7 @@ sub {
     margin-top: 0.5em;
     display: inline-block;
     padding: 0 2em;
-    border: 1px solid #444;
+    border: 1px solid #445;
     cursor: grab;
     background-color: #1a1b23;
     margin-right: 0.3em;
@@ -252,7 +252,7 @@ a > .btn-div:hover {
 }
 
 #TOC {
-    border-bottom: 1px solid #444;
+    border-bottom: 1px solid #445;
     padding-bottom: 0.5em;
     margin-bottom: 1.5em;
 }
@@ -266,7 +266,7 @@ a > .btn-div:hover {
   }
 
   blockquote, div.sourceCode {
-      font-size: 0.97em;
+      font-size: 0.96em;
   }
 }
 
@@ -278,7 +278,7 @@ a > .btn-div:hover {
       max-width: 88%;
   }
   blockquote, div.sourceCode {
-      font-size: 0.97em;
+      font-size: 0.96em;
   }
 }
 
