--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
 <div class="center-text" id="index-content">
  <h2>Hi, my name is Nebojsa</h2>
  <img class="avatar center" src="img/avatar.jpg"/>
- <h3>I'm a software engineer</h3>
+ <h3>I'm a Software Developer</h3>
  <div id="index-svg-div">
   <a href="files/Nebojsa-Koturovic-Software-Developer-Resume.pdf"><img class="index-svg" src="img/icon/file-text.svg"/></a>
   <a href="mailto:contact@kotur.me?subject=Hi, I saw your web presentation"><img class="index-svg" src="img/icon/mail.svg"/></a>
